fix put editable body in swagger
